samples/_failures_safe/1761711154_16ffd8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_955d41cf.c: In function ‘main’:
./samples/SAFE/__tmp_955d41cf.c:197:17: error: expected ‘;’ at end of input
  197 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_955d41cf.c:197:9: error: expected declaration or statement at end of input
  197 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_955d41cf.c:197:9: error: expected declaration or statement at end of input
